fix: Update all Terraform Cloud orgs to lornu-ai and fix validation workflow
- Replace all references to 'disposable-org' with 'lornu-ai'
  - Update terraform/aws/staging/main.tf organization
  - Update drift-sentinel workflow organization references
  - Update AGENTS.md documentation

- Fix terraform-lint workflow validation errors
  - Change production directory from terraform/aws/production to terraform/aws
  - Add -upgrade flag to terraform init to ensure providers are downloaded

- Add GCP service account credentials support
  - Update terraform/gcp/main.tf to use GOOGLE_CREDENTIALS variable
  - Add GOOGLE_CREDENTIALS variable to terraform/gcp/variables.tf
  - Fix IAM module versions for compatibility

Fixes GitHub Actions validation errors in terraform-lint workflow

--- a/.github/workflows/drift-sentinel.yml
+++ b/.github/workflows/drift-sentinel.yml
@@ -27,7 +27,7 @@ permissions:
 env:
   TF_API_TOKEN: ${{ secrets.AWS_TF_API_TOKEN }}
   TF_CLOUD_ORG_PROD: "lornu-ai"
-  TF_CLOUD_ORG_STAGING: "disposable-org"
+  TF_CLOUD_ORG_STAGING: "lornu-ai"
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
 jobs:
@@ -43,7 +43,7 @@ jobs:
             terraform_dir: "terraform/aws/production"
             environment: "production"
           - workspace: "lornu-ai-staging-aws"
-            organization: "disposable-org"
+            organization: "lornu-ai"
             terraform_dir: "terraform/aws/staging"
             environment: "staging"
     # Always run for scheduled checks; for manual dispatch, filter in steps
@@ -177,7 +177,7 @@ jobs:
             terraform_dir: "terraform/aws/production"
             environment: "production"
           - workspace: "lornu-ai-staging-aws"
-            organization: "disposable-org"
+            organization: "lornu-ai"
             terraform_dir: "terraform/aws/staging"
             environment: "staging"
 
