--- a/.github/workflows/drift-sentinel.yml
+++ b/.github/workflows/drift-sentinel.yml
@@ -7,8 +7,9 @@ on:
   workflow_dispatch:
     inputs:
       workspace:
-        description: 'Terraform Cloud workspace to check (leave empty for all)'
+        description: 'Terraform Cloud workspace to check'
         required: false
+        default: 'all'
         type: choice
         options:
           - 'all'
@@ -40,7 +41,7 @@ jobs:
         include:
           - workspace: "lornu-ai-kustomize"
             organization: "lornu-ai"
-            terraform_dir: "terraform/aws/production"
+            terraform_dir: "terraform/aws"
             environment: "production"
           - workspace: "lornu-ai-staging-aws"
             organization: "lornu-ai"
@@ -53,9 +54,13 @@ jobs:
       - name: "Check workspace filter"
         id: check-filter
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ] && [ "${{ github.event.inputs.workspace }}" != "all" ] && [ "${{ github.event.inputs.workspace }}" != "${{ matrix.workspace }}" ]; then
+          REQUESTED_WORKSPACE="${{ github.event.inputs.workspace }}"
+          if [ -z "$REQUESTED_WORKSPACE" ]; then
+            REQUESTED_WORKSPACE="all"
+          fi
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ] && [ "$REQUESTED_WORKSPACE" != "all" ] && [ "$REQUESTED_WORKSPACE" != "${{ matrix.workspace }}" ]; then
             echo "skip=true" >> $GITHUB_OUTPUT
-            echo "Skipping workspace ${{ matrix.workspace }} (filter: ${{ github.event.inputs.workspace }})"
+            echo "Skipping workspace ${{ matrix.workspace }} (filter: $REQUESTED_WORKSPACE)"
           else
             echo "skip=false" >> $GITHUB_OUTPUT
           fi
@@ -88,16 +93,23 @@ jobs:
       - name: "Run Speculative Plan (Drift Detection)"
         if: steps.check-filter.outputs.skip != 'true'
         id: plan
-        env:
-          TF_VAR_acm_certificate_arn: ${{ matrix.environment == 'staging' && secrets.ACM_CERTIFICATE_ARN || '' }}
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ matrix.environment == 'production' && secrets.PROD_DB_USERNAME || '' }}
-          TF_VAR_db_password: ${{ matrix.environment == 'production' && secrets.PROD_DB_PASSWORD || '' }}
-          TF_VAR_resource_prefix: ${{ matrix.environment == 'production' && secrets.PROD_RESOURCE_PREFIX || '' }}
-          TF_VAR_github_repo: ${{ matrix.environment == 'production' && secrets.PROD_GITHUB_REPO || '' }}
         run: |
           echo "Running speculative plan for workspace: ${{ matrix.workspace }}"
+          export TF_VAR_secrets_manager_arn_pattern="${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}"
+          export TF_VAR_docker_image="placeholder"
+
+          if [ "${{ matrix.environment }}" = "production" ]; then
+            export TF_VAR_domain_name="${{ secrets.PROD_DOMAIN }}"
+            export TF_VAR_db_username="${{ secrets.PROD_DB_USERNAME }}"
+            export TF_VAR_db_password="${{ secrets.PROD_DB_PASSWORD }}"
+            export TF_VAR_resource_prefix="${{ secrets.PROD_RESOURCE_PREFIX }}"
+            export TF_VAR_github_repo="${{ secrets.PROD_GITHUB_REPO }}"
+          else
+            export TF_VAR_aws_region="${{ secrets.AWS_DEFAULT_REGION }}"
+            export TF_VAR_acm_certificate_arn="${{ secrets.ACM_CERTIFICATE_ARN }}"
+            export TF_VAR_stage_domain="${{ secrets.STAGE_DOMAIN }}"
+          fi
+
           terraform -chdir=${{ matrix.terraform_dir }} plan -detailed-exitcode -out=tfplan.binary
           PLAN_EXIT_CODE=$?
           
@@ -174,7 +186,7 @@ jobs:
         include:
           - workspace: "lornu-ai-kustomize"
             organization: "lornu-ai"
-            terraform_dir: "terraform/aws/production"
+            terraform_dir: "terraform/aws"
             environment: "production"
           - workspace: "lornu-ai-staging-aws"
             organization: "lornu-ai"
@@ -182,16 +194,33 @@ jobs:
             environment: "staging"
 
     steps:
+      - name: "Check workspace filter"
+        id: check-filter
+        run: |
+          REQUESTED_WORKSPACE="${{ github.event.inputs.workspace }}"
+          if [ -z "$REQUESTED_WORKSPACE" ]; then
+            REQUESTED_WORKSPACE="all"
+          fi
+          if [ "$REQUESTED_WORKSPACE" != "all" ] && [ "$REQUESTED_WORKSPACE" != "${{ matrix.workspace }}" ]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "Skipping workspace ${{ matrix.workspace }} (filter: $REQUESTED_WORKSPACE)"
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: "Checkout"
+        if: steps.check-filter.outputs.skip != 'true'
         uses: actions/checkout@v4
 
       - name: "Configure AWS Credentials"
+        if: steps.check-filter.outputs.skip != 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: "Setup Terraform"
+        if: steps.check-filter.outputs.skip != 'true'
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.8.0"
@@ -210,16 +239,23 @@ jobs:
 
       - name: "Apply Remediation (Terraform Apply)"
         if: steps.check-filter.outputs.skip != 'true'
-        env:
-          TF_VAR_acm_certificate_arn: ${{ matrix.environment == 'staging' && secrets.ACM_CERTIFICATE_ARN || '' }}
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ matrix.environment == 'production' && secrets.PROD_DB_USERNAME || '' }}
-          TF_VAR_db_password: ${{ matrix.environment == 'production' && secrets.PROD_DB_PASSWORD || '' }}
-          TF_VAR_resource_prefix: ${{ matrix.environment == 'production' && secrets.PROD_RESOURCE_PREFIX || '' }}
-          TF_VAR_github_repo: ${{ matrix.environment == 'production' && secrets.PROD_GITHUB_REPO || '' }}
         run: |
           echo "🔧 Applying remediation for workspace: ${{ matrix.workspace }}"
+          export TF_VAR_secrets_manager_arn_pattern="${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}"
+          export TF_VAR_docker_image="placeholder"
+
+          if [ "${{ matrix.environment }}" = "production" ]; then
+            export TF_VAR_domain_name="${{ secrets.PROD_DOMAIN }}"
+            export TF_VAR_db_username="${{ secrets.PROD_DB_USERNAME }}"
+            export TF_VAR_db_password="${{ secrets.PROD_DB_PASSWORD }}"
+            export TF_VAR_resource_prefix="${{ secrets.PROD_RESOURCE_PREFIX }}"
+            export TF_VAR_github_repo="${{ secrets.PROD_GITHUB_REPO }}"
+          else
+            export TF_VAR_aws_region="${{ secrets.AWS_DEFAULT_REGION }}"
+            export TF_VAR_acm_certificate_arn="${{ secrets.ACM_CERTIFICATE_ARN }}"
+            export TF_VAR_stage_domain="${{ secrets.STAGE_DOMAIN }}"
+          fi
+
           if [ -f "${{ matrix.terraform_dir }}/tfplan.binary" ]; then
             terraform -chdir=${{ matrix.terraform_dir }} apply tfplan.binary
           else
@@ -234,4 +270,3 @@ jobs:
           echo "**Workspace:** \`${{ matrix.workspace }}\`" >> $GITHUB_STEP_SUMMARY
           echo "**Status:** Remediated" >> $GITHUB_STEP_SUMMARY
           echo "**Applied At:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_STEP_SUMMARY
-
