fix: Address code review comments for PR #443
Critical fixes:
- Replace roles/editor with least-privilege roles (compute, iam, network)
- Add branch restriction to WIF binding (main branch only)
- Fix ci-unified.yml working directory paths and dependency installation
- Add .terraform.lock.hcl to .gitignore
- Fix orchestrator.yml conditional logic for better clarity
- Fix coverage upload path in ci-unified.yml

Security improvements:
- GCP service account now uses specific roles instead of roles/editor
- WIF binding restricted to main branch via principalSet path
- Better error handling in workflow conditionals

Addresses review comments from principle-lgtm

--- a/.github/workflows/ci-unified.yml
+++ b/.github/workflows/ci-unified.yml
@@ -58,9 +58,10 @@ jobs:
         uses: codecov/codecov-action@v4
         if: always()
         with:
-          file: ./packages/api/coverage.xml
+          file: ./coverage.xml
           flags: backend
           name: backend-coverage
+          working-directory: packages/api
 
   frontend-lint-test:
     name: "Frontend - Lint & Test (bun)"
@@ -118,12 +119,13 @@ jobs:
       - name: Install uv
         run: pip install uv
 
-      - name: Install Dependencies
-        run: |
-          cd apps/web
-          bun install --frozen-lockfile
-          cd ../../packages/api
-          uv sync --frozen --no-dev
+      - name: Install Frontend Dependencies
+        working-directory: apps/web
+        run: bun install --frozen-lockfile
+
+      - name: Install Backend Dependencies
+        working-directory: packages/api
+        run: uv sync --frozen --no-dev
 
       - name: Install Playwright Browsers
         working-directory: apps/web
