--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -47,8 +47,8 @@ jobs:
     name: "AWS Infrastructure (${{ inputs.action || 'plan' }})"
     runs-on: ubuntu-latest
     if: |
-      (inputs.cloud == 'aws' || inputs.cloud == 'both' || github.event_name == 'push') &&
-      (github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'terraform/aws') || contains(github.event.head_commit.message, 'kubernetes'))
+      (github.event_name == 'workflow_dispatch' && (inputs.cloud == 'aws' || inputs.cloud == 'both')) ||
+      (github.event_name == 'push' && (contains(github.event.head_commit.message, 'terraform/aws') || contains(github.event.head_commit.message, 'kubernetes')))
     strategy:
       fail-fast: false
       max-parallel: 1  # Prevent API throttling
@@ -107,8 +107,8 @@ jobs:
     name: "GCP Infrastructure (${{ inputs.action || 'plan' }})"
     runs-on: ubuntu-latest
     if: |
-      (inputs.cloud == 'gcp' || inputs.cloud == 'both' || github.event_name == 'push') &&
-      (github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'terraform/gcp') || contains(github.event.head_commit.message, 'kubernetes'))
+      (github.event_name == 'workflow_dispatch' && (inputs.cloud == 'gcp' || inputs.cloud == 'both')) ||
+      (github.event_name == 'push' && (contains(github.event.head_commit.message, 'terraform/gcp') || contains(github.event.head_commit.message, 'kubernetes')))
     strategy:
       fail-fast: false
       max-parallel: 1  # Prevent API throttling
