--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -46,10 +46,8 @@ jobs:
       matrix:
         include:
           - workspace: "aws-kustomize"
-            tf_api_token: ${{ secrets.AWS_TF_API_TOKEN }}
             config_dir: "./terraform/aws"
           - workspace: "gcp-lornu-ai"
-            tf_api_token: ${{ secrets.GCP_TF_API_TOKEN }}
             config_dir: "./terraform/gcp"
     steps:
       - name: Checkout
@@ -63,7 +61,7 @@ jobs:
           directory: ${{ matrix.config_dir }}
           speculative: true
         env:
-          TF_API_TOKEN: ${{ matrix.tf_api_token }}
+          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
 
       - name: Create Speculative Plan
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
@@ -73,7 +71,7 @@ jobs:
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           is_speculative: true
         env:
-          TF_API_TOKEN: ${{ matrix.tf_api_token }}
+          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
 
       - name: Log Sync Status
         run: |
