Enable Terraform checks on PR: add organization param and pull_request trigger

--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -43,6 +43,7 @@ jobs:
     if: |
       github.event_name == 'schedule' ||
       github.event_name == 'push' ||
+      github.event_name == 'pull_request' ||
       (github.event_name == 'workflow_dispatch' && (inputs.action == 'sync-config' || inputs.action == 'all'))
     strategy:
       fail-fast: false
@@ -61,6 +62,7 @@ jobs:
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
         id: upload
         with:
+          organization: ${{ env.TF_CLOUD_ORG }}
           workspace: ${{ matrix.workspace }}
           directory: ${{ matrix.config_dir }}
           speculative: true
@@ -71,6 +73,7 @@ jobs:
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
         id: plan
         with:
+          organization: ${{ env.TF_CLOUD_ORG }}
           workspace: ${{ matrix.workspace }}
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           is_speculative: true
