--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -65,7 +65,7 @@ jobs:
           organization: ${{ env.TF_CLOUD_ORG }}
           workspace: ${{ matrix.workspace }}
           directory: ${{ matrix.config_dir }}
-          speculative: true
+          speculative: ${{ github.event_name == 'pull_request' }}
         env:
           TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
 
@@ -76,7 +76,9 @@ jobs:
           organization: ${{ env.TF_CLOUD_ORG }}
           workspace: ${{ matrix.workspace }}
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
-          is_speculative: true
+          is_speculative: ${{ github.event_name == 'pull_request' }}
+        env:
+          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
         env:
           TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
 
