--- a/.github/workflows/drift-sentinel.yml
+++ b/.github/workflows/drift-sentinel.yml
@@ -26,9 +26,8 @@ permissions:
   contents: read
 
 env:
-  TF_API_TOKEN: ${{ secrets.AWS_TF_API_TOKEN }}
-  TF_CLOUD_ORG_PROD: "lornu-ai"
-  TF_CLOUD_ORG_STAGING: "lornu-ai"
+  TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+  TF_CLOUD_ORG: "lornu-ai"
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
 jobs:
