--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -67,7 +67,7 @@ jobs:
           directory: ${{ matrix.config_dir }}
           speculative: ${{ github.event_name == 'pull_request' }}
         env:
-          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Create Speculative Plan
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
@@ -78,9 +78,7 @@ jobs:
           configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           is_speculative: ${{ github.event_name == 'pull_request' }}
         env:
-          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
-        env:
-          TF_API_TOKEN: ${{ matrix.workspace == 'aws-kustomize' && secrets.AWS_TF_API_TOKEN || secrets.GCP_TF_API_TOKEN }}
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Log Sync Status
         run: |
@@ -97,7 +95,7 @@ jobs:
       (github.event_name == 'workflow_dispatch' && (inputs.action == 'sync-secrets-aws' || inputs.action == 'all'))
     env:
       TF_WORKSPACE: "aws-kustomize"
-      TF_API_TOKEN: ${{ secrets.AWS_TF_API_TOKEN }}
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       CONFIG_DIRECTORY: "./terraform/aws"
     steps:
       - name: Checkout
@@ -147,7 +145,7 @@ jobs:
       (github.event_name == 'workflow_dispatch' && (inputs.action == 'sync-secrets-gcp' || inputs.action == 'all'))
     env:
       TF_WORKSPACE: "gcp-lornu-ai"
-      TF_API_TOKEN: ${{ secrets.GCP_TF_API_TOKEN }}
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       CONFIG_DIRECTORY: "./terraform/gcp"
     steps:
       - name: Checkout
