Fix shellcheck issues: quote variables and combine redirects
- Quote all terraform -chdir paths and variables
- Combine multiple echo redirects using { } >> file syntax
- Fix PYTHONPATH declaration to avoid masking return values
- Quote PROJECT_ID in gcloud command
- Address all SC2086, SC2129, and SC2155 shellcheck warnings

--- a/.github/workflows/ci-unified.yml
+++ b/.github/workflows/ci-unified.yml
@@ -134,7 +134,8 @@ jobs:
       - name: Start Backend API Server
         run: |
           cd ../../packages/api
-          export PYTHONPATH="$(pwd)/../..:$PYTHONPATH"
+          PYTHONPATH="$(pwd)/../..:$PYTHONPATH"
+          export PYTHONPATH
           uv run -- uvicorn packages.api.main:app --host 0.0.0.0 --port 8080 &
           sleep 5
           curl -f http://localhost:8080/api/health || exit 1
