--- a/.github/workflows/drift-sentinel.yml
+++ b/.github/workflows/drift-sentinel.yml
@@ -52,10 +52,10 @@ jobs:
             REQUESTED_WORKSPACE="all"
           fi
           if [ "${{ github.event_name }}" == "workflow_dispatch" ] && [ "$REQUESTED_WORKSPACE" != "all" ] && [ "$REQUESTED_WORKSPACE" != "${{ matrix.workspace }}" ]; then
-            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "skip=true" >> "$GITHUB_OUTPUT"
             echo "Skipping workspace ${{ matrix.workspace }} (filter: $REQUESTED_WORKSPACE)"
           else
-            echo "skip=false" >> $GITHUB_OUTPUT
+            echo "skip=false" >> "$GITHUB_OUTPUT"
           fi
 
       - name: "Checkout"
@@ -80,7 +80,7 @@ jobs:
         if: steps.check-filter.outputs.skip != 'true'
         id: init
         run: |
-          terraform -chdir=${{ matrix.terraform_dir }} init
+          terraform -chdir="${{ matrix.terraform_dir }}" init
         continue-on-error: true
 
       - name: "Run Speculative Plan (Drift Detection)"
@@ -97,22 +97,28 @@ jobs:
           export TF_VAR_resource_prefix="${{ secrets.PROD_RESOURCE_PREFIX }}"
           export TF_VAR_github_repo="${{ secrets.PROD_GITHUB_REPO }}"
 
-          terraform -chdir=${{ matrix.terraform_dir }} plan -detailed-exitcode -out=tfplan.binary
+          terraform -chdir="${{ matrix.terraform_dir }}" plan -detailed-exitcode -out=tfplan.binary
           PLAN_EXIT_CODE=$?
 
           # Exit code 0 = no changes, 1 = error, 2 = changes detected (drift)
-          if [ $PLAN_EXIT_CODE -eq 2 ]; then
-            echo "DRIFT_DETECTED=true" >> $GITHUB_OUTPUT
-            echo "DRIFT_EXIT_CODE=2" >> $GITHUB_OUTPUT
+          if [ "$PLAN_EXIT_CODE" -eq 2 ]; then
+            {
+              echo "DRIFT_DETECTED=true"
+              echo "DRIFT_EXIT_CODE=2"
+            } >> "$GITHUB_OUTPUT"
             echo "⚠️ DRIFT DETECTED in workspace: ${{ matrix.workspace }}"
-            terraform -chdir=${{ matrix.terraform_dir }} show -json tfplan.binary > drift-plan.json
-          elif [ $PLAN_EXIT_CODE -eq 1 ]; then
-            echo "DRIFT_DETECTED=error" >> $GITHUB_OUTPUT
-            echo "DRIFT_EXIT_CODE=1" >> $GITHUB_OUTPUT
+            terraform -chdir="${{ matrix.terraform_dir }}" show -json tfplan.binary > drift-plan.json
+          elif [ "$PLAN_EXIT_CODE" -eq 1 ]; then
+            {
+              echo "DRIFT_DETECTED=error"
+              echo "DRIFT_EXIT_CODE=1"
+            } >> "$GITHUB_OUTPUT"
             echo "❌ ERROR during plan execution"
           else
-            echo "DRIFT_DETECTED=false" >> $GITHUB_OUTPUT
-            echo "DRIFT_EXIT_CODE=0" >> $GITHUB_OUTPUT
+            {
+              echo "DRIFT_DETECTED=false"
+              echo "DRIFT_EXIT_CODE=0"
+            } >> "$GITHUB_OUTPUT"
             echo "✅ No drift detected in workspace: ${{ matrix.workspace }}"
           fi
         continue-on-error: true
@@ -130,22 +136,24 @@ jobs:
       - name: "Generate Drift Report"
         if: steps.check-filter.outputs.skip != 'true' && steps.plan.outputs.DRIFT_DETECTED == 'true'
         run: |
-          echo "## 🚨 Infrastructure Drift Detected" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Workspace:** \`${{ matrix.workspace }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Organization:** \`${{ matrix.organization }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Detected At:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Plan Summary" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          terraform -chdir=${{ matrix.terraform_dir }} show tfplan.binary | head -100 >> $GITHUB_STEP_SUMMARY || echo "Unable to display plan summary" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Remediation Steps" >> $GITHUB_STEP_SUMMARY
-          echo "1. Review the drift plan artifact above" >> $GITHUB_STEP_SUMMARY
-          echo "2. If drift is expected, update Terraform code accordingly" >> $GITHUB_STEP_SUMMARY
-          echo "3. If drift is unexpected, trigger remediation via workflow_dispatch with \`remediation: true\`" >> $GITHUB_STEP_SUMMARY
-          echo "4. Or manually run: \`terraform apply\` in the \`${{ matrix.terraform_dir }}\` directory" >> $GITHUB_STEP_SUMMARY
+          {
+            echo "## 🚨 Infrastructure Drift Detected"
+            echo ""
+            echo "**Workspace:** \`${{ matrix.workspace }}\`"
+            echo "**Organization:** \`${{ matrix.organization }}\`"
+            echo "**Detected At:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")"
+            echo ""
+            echo "### Plan Summary"
+            echo "\`\`\`"
+            terraform -chdir="${{ matrix.terraform_dir }}" show tfplan.binary | head -100 || echo "Unable to display plan summary"
+            echo "\`\`\`"
+            echo ""
+            echo "### Remediation Steps"
+            echo "1. Review the drift plan artifact above"
+            echo "2. If drift is expected, update Terraform code accordingly"
+            echo "3. If drift is unexpected, trigger remediation via workflow_dispatch with \`remediation: true\`"
+            echo "4. Or manually run: \`terraform apply\` in the \`${{ matrix.terraform_dir }}\` directory"
+          } >> "$GITHUB_STEP_SUMMARY"
 
       - name: "Alert on Drift Detection"
         if: steps.check-filter.outputs.skip != 'true' && steps.plan.outputs.DRIFT_DETECTED == 'true'
@@ -208,7 +216,7 @@ jobs:
 
       - name: "Terraform Init"
         if: steps.check-filter.outputs.skip != 'true'
-        run: terraform -chdir=${{ matrix.terraform_dir }} init
+        run: terraform -chdir="${{ matrix.terraform_dir }}" init
 
       - name: "Download Drift Plan Artifact"
         if: steps.check-filter.outputs.skip != 'true'
@@ -231,10 +239,10 @@ jobs:
           export TF_VAR_github_repo="${{ secrets.PROD_GITHUB_REPO }}"
 
           if [ -f "${{ matrix.terraform_dir }}/tfplan.binary" ]; then
-            terraform -chdir=${{ matrix.terraform_dir }} apply tfplan.binary
+            terraform -chdir="${{ matrix.terraform_dir }}" apply tfplan.binary
           else
             echo "No plan file found, running fresh apply"
-            terraform -chdir=${{ matrix.terraform_dir }} apply -auto-approve
+            terraform -chdir="${{ matrix.terraform_dir }}" apply -auto-approve
           fi
 
       - name: "Remediation Complete"
