fix: correct principalSet format and rename GCP_SA_EMAIL to GCP_WIF_SA_EMAIL
- Fix principalSet format in tfc-oidc.tf to use explicit path with project number
  (consistent with github-wif.tf format)
- Add data.google_project.project data source to tfc-oidc.tf
- Rename GCP_SA_EMAIL secret to GCP_WIF_SA_EMAIL to avoid conflicts
- Update workflows to use GCP_WIF_SA_EMAIL instead of GCP_SA_EMAIL

--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -154,7 +154,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
-          service_account: ${{ secrets.GCP_SA_EMAIL }}
+          service_account: ${{ secrets.GCP_WIF_SA_EMAIL }}
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
