fix: enable ADC authentication for GCP Terraform runs
- Make GOOGLE_CREDENTIALS optional in provider (use ADC when null)
- Add create_credentials_file: true to auth action for WIF
- Remove duplicate data.google_project.project from tfc-oidc.tf (already in github-wif.tf)

This allows:
- GitHub Actions: Use Application Default Credentials from WIF
- TFC: Still use explicit GOOGLE_CREDENTIALS from workspace variables

--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -152,9 +152,11 @@ jobs:
 
       - name: Authenticate to Google Cloud (OIDC)
         uses: google-github-actions/auth@v2
+        id: auth
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_WIF_SA_EMAIL }}
+          create_credentials_file: true
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v3
