--- a/kubernetes/base/crossplane/kustomization.yaml
+++ b/kubernetes/base/crossplane/kustomization.yaml
@@ -1,6 +1,6 @@
-# Crossplane Installation via Kustomize
-# This installs Crossplane core and GCP provider using Kustomize instead of Helm
-# Official manifests from: https://github.com/crossplane/crossplane
+# Crossplane GCP Bootstrap Bundle
+# This Kustomize bundle installs Crossplane and configures it to manage GCP resources
+# via Workload Identity (the "bridge" created by Terraform)
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
@@ -9,21 +9,17 @@ namespace: crossplane-system
 
 # Automatically create the namespace if it doesn't exist
 commonLabels:
-  app: crossplane
+  platform: gcp-management
   managed-by: kustomize
 
 resources:
-  # Crossplane Core - CRDs
-  - https://github.com/crossplane/crossplane/releases/download/v1.14.0/crds.yaml
+  # 1. Install Crossplane Core (v1.14.0)
+  - https://github.com/crossplane/crossplane/cluster?ref=v1.14.0
   
-  # Crossplane Core - Cluster resources (RBAC, deployments)
-  - https://github.com/crossplane/crossplane/releases/download/v1.14.0/cluster.yaml
+  # 2. Custom GCP Project API (Interface + Implementation)
+  - xgcpproject-xrd.yaml
+  - xgcpproject-composition.yaml
   
-  # GCP Provider Configuration
+  # 3. GCP Provider Configuration (Connection via Workload Identity)
   - provider-config.yaml
-
-# Images (optional - pin specific versions)
-# images:
-#   - name: xpkg.upbound.io/crossplane-contrib/provider-helm
-#     newTag: v0.15.0
 
