update the branch name for github actions TF workflows to gcloud-oidc

--- a/.github/workflows/hub-infra.yaml
+++ b/.github/workflows/hub-infra.yaml
@@ -2,7 +2,7 @@ name: "GCP Hub Provisioning"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ gcloud-oidc ]
     paths:
       - 'hub/**' # Only triggers when you touch the hub folder
 
