--- a/.github/workflows/hub-infra.yaml
+++ b/.github/workflows/hub-infra.yaml
@@ -33,5 +33,5 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Plan
-        run: terraform plan -no-color
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
